@@ -49,6 +49,7 @@ dviljk - maintained here, by Joachim Schrod
 
 dviout-util - by Japanese TeX Development Community (Hironobu, Takuji et al.)
   https://github.com/texjporg/tex-jp-build
+  but also: https://github.com/aminophen/dviout-util
 
 dvipdfm-x - maintained here, by us, contains
   dvipdfmx
